# job-market-analytics-recsys

./: .gitignore  README.md
dsde/: Makefile  README.md  kaggle.json  pyproject.toml  requirements.txt
dsde/artifacts/: kpi_summary.json  location_counts.csv  schema_report.json  skill_aliases.json
dsde/artifacts/graphs/: skill_graph.json
dsde/docs/: data_modeling.md  workflow_improvement.md
dsde/src/: __init__.py  app_streamlit.py  config.py  run_all.py
dsde/src/analytics/: build_tables.py  make_figures.py
dsde/src/extract/: __init__.py  extract.py  fetch_kaggle_api.py  fetch_kagglehub.py  fetch_remotive.py  fetch_secondary_kaggle.py  ingest_kaggle.py
dsde/src/features/: __init__.py  build_features.py
dsde/src/load/: load.py
dsde/src/models/: __init__.py  recommender.py  train_model.py  train_recommender.py
dsde/src/pipeline/: core.py
dsde/src/quality/: guard.py
dsde/src/scripts/: create_sample_data.py  diagnose_data.py  split_data.py
dsde/src/streaming/: mock_stream.py
dsde/src/transform/: __init__.py  build_canonical_jobs.py  clean_kaggle.py  clean_remotive.py  clean_secondary.py  column_map.py  skill_graph.py  skill_normalize.py  transform.py
dsde/src/utils/: __init__.py  common.py  export_to_web.py  io.py  logging.py  logging_config.py  schema.py  schema_report.py
dsde/src/viz/: __init__.py  eda.py
dsde/tests/: test_smoke.py  verify_fallback.py  verify_split.py
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Badge.tsx  BentoGrid.tsx  Button.tsx  (+7 more)
(+24 files in other folders)
