[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscope-dsde"
version = "0.1.0"
description = "DSDE pipeline scaffold for JobScope (phase 0)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
]
